# AC215_AIMinO

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ASSIGNMENT_CHECKLIST.md  MS4_Plan.md  Milestone4.md  README.md  TESTING.md  TestPipeline  UNTESTED_CODE.md  coverage.xml  docker-compose.test.yml  environment.yml  pytest.ini  shared_storage_plan.md  test_api_key.py  测试流程指南.md
.claude/: settings.local.json
.github/scripts/: generate_coverage_summary.py  merge_coverage.py
.github/workflows/: README.md  ci-cd.yml  ci.yml
AC215_AIMinO/: .gitignore  README.md
AC215_AIMinO/MD_Instructions/: Agent_Workflow_Guide.md
AC215_AIMinO/aimino_core/handlers/: layers.py  ui.py
AC215_AIMinO/archive/: napariAgent.py  napari_llm_mask.py
AC215_AIMinO/napari_app/: main.py
AC215_AIMinO/src/: Dockerfile  container_startup.sh
AC215_AIMinO/src/server/: __init__.py  api.py
MD_Instructions/: Manager_Instructions.md  Worker_Instructions.md
aimino_backend/agents/: lead_manager.py
aimino_backend/agents/handbooks/: view_zoom_worker.md
aimino_backend/app/: __init__.py  config.py  logging.py  schemas.py
aimino_core/: command_models.py
aimino_core/handlers/: __init__.py  viewer.py
aimino_core/handlers/layer_management/: layer_creation.py  layer_list.py  layer_selection.py
aimino_core/handlers/viewer_display/: camera.py  dims.py  viewer.py
aimino_frontend/: .gitignore  LICENSE  MANIFEST.in  PUBLISHING.md  PyPI发布指南.md  README.md  publish.sh  pyproject.toml
aimino_frontend/aimino_core/: command_models.py  pyproject.toml
aimino_frontend/aimino_core/handlers/: __init__.py  shared.py
aimino_frontend/aimino_core/handlers/layer_management/: __init__.py  layer_selection.py
aimino_frontend/aimino_core/handlers/layer_visualization/: image_layer.py  points_layer.py  shapes_layer.py  utils.py
aimino_frontend/aimino_core/handlers/viewer_display/: __init__.py  viewer.py  viewer_model.py
aimino_frontend/napari_app/: __init__.py  client_agent.py  main.py
aimino_frontend/napari_app/aimino_core/: pyproject.toml
aimino_frontend/napari_app/reports/: Repo_Hygiene_Plan.md
aimino_frontend/napari_app/src/server/: config.py
aimino_frontend/napari_app/src/server/api/: __init__.py  contracts.md
aimino_frontend/src/aimino_frontend/: __init__.py
aimino_frontend/src/aimino_frontend/aimino_core/: __init__.py  command_models.py  data_store.py  errors.py  executor.py  pyproject.toml.old  registry.py
aimino_frontend/src/aimino_frontend/aimino_core/handlers/: __init__.py  context_handler.py
aimino_frontend/src/aimino_frontend/aimino_core/handlers/layer_management/: layer_list.py
aimino_frontend/src/aimino_frontend/aimino_core/handlers/layer_visualization/: __init__.py  labels_layer.py
aimino_frontend/src/aimino_frontend/aimino_core/handlers/special_analysis/: __init__.py  data_ingest_handler.py  density_handler.py  mask_handler.py  neighborhood_handler.py
aimino_frontend/src/aimino_frontend/aimino_core/handlers/special_analysis/utils/: __init__.py  density_processing.py  helpers.py  image_processing.py  mask_processing.py  neighborhood.py
aimino_frontend/src/aimino_frontend/aimino_core/handlers/viewer_display/: camera.py  viewer.py
aimino_frontend/src/aimino_frontend/napari_app/: __init__.py  client_agent.py  dataset_context.py  main.py  napari.yaml
aimino_frontend/test_env/: pyvenv.cfg
archive/llm-agent/: napariLLM.py
k8s/: README.md  deployment.yaml
napari_app/: client_agent.py  main.py
napari_app/__pycache__/: __init__.cpython-313.pyc.1686730614096  client_agent.cpython-313.pyc.1686730614096  main.cpython-313.pyc.1686730614096
pulumi_deployment/src/deployment/: docker-shell.sh
src/: docker-compose.yml
src/Dev_Instructions/: Agent_Workflow_Guide.md
src/api_service/: .dockerignore  Dockerfile  README.md  __init__.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
src/api_service/api/: service.py
src/api_service/api/agents/: __init__.py  lead_manager.py
src/api_service/api/agents/handbooks/: __init__.py  context_worker.md  data_ingest_worker.md  layer_panel_worker.md  mask_density_worker.md  neighborhood_worker.md  task_parser.md  view_zoom_worker.md
src/api_service/api/agents/workers/: __init__.py
src/api_service/api/routers/: datasets.py  healthz.py  invoke.py
src/api_service/api/utils/: agents_bootstrap.py  config.py  logging.py  schemas.py
src/api_service/scripts/: dev_env_check.sh  docker-hub.sh  docker-shell.sh  run_api.sh  smoke_invoke.sh
src/api_service/tests/: test_api_basic.py
src/deployment/: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  docker-shell.sh
src/deployment/deploy_images/: Pulumi.dev1.yaml  (+1 more)
src/server/: api.py  start_api.py  test_api.py
tests/: __init__.py  test_context_commands.py  test_data_store.py  test_pipeline_e2e.py
tests/integration/: __init__.py  test_api.py
tests/system/: __init__.py  test_system_api.py
tests/unit/: __init__.py  test_agents_bootstrap.py  test_command_models_view.py  test_executor.py  test_logging.py  test_neighborhood_utils.py  test_registry.py  test_service.py  test_utils.py
(+28 files in other folders)
