[project]
name = "aimino"
version = "0.1.0"
description = "AIMinO Napari frontend application with command execution and agent client"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "AIMinO Team: Yingxiao (TK) Shi, Kida Huang, Yinuo Cheng, Yuan Tian"}
]
keywords = ["napari", "bioinformatics", "image-analysis", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pydantic>=2",
    "typing_extensions",
    "napari[pyqt5]",
    "numpy",
    "qtpy",
    "httpx",
    "google-genai",
    "pyyaml",
    "anndata",
    "tifffile",
    "scipy",
    "scikit-image",
]

[project.urls]
Homepage = "https://github.com/KidaGSD/AC215_AIMinO"
Documentation = "https://github.com/KidaGSD/AC215_AIMinO#readme"
Repository = "https://github.com/KidaGSD/AC215_AIMinO"
Issues = "https://github.com/KidaGSD/AC215_AIMinO/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.scripts]
aimino-napari = "aimino_frontend.napari_app:launch"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml"]

# Napari plugin entry point (npe2)
# Use yaml file path format (like napari-svg does)
[project.entry-points."napari.manifest"]
aimino = "aimino_frontend.napari_app:napari.yaml"

