[project]
name = "aimino-api-service"
version = "0.1.0"
description = "AIMinO FastAPI service (cheese-style)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2",
  "pydantic-settings>=2",
  "httpx>=0.24",
  "google-genai",
  "google-adk",
]

[tool.setuptools]
packages = []
