[project]
name = "aimino-api-service"
version = "0.1.0"
description = "AIMinO FastAPI service (cheese-style)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "pydantic>=2",
  "pydantic-settings>=2",
  "httpx>=0.24",
  "google-genai",
  "google-adk",
  # Dependencies for special analysis handlers (from aimino_core)
  # These are needed because aimino_core handlers import these modules
  "anndata",
  "tifffile",
  "scipy",
  "scikit-image",
  "numpy",
  "napari",  # Required for special_analysis handlers that use napari.Viewer
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-mock>=3.0",
  "pytest-asyncio>=0.21",
  "requests>=2.28",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests", "src/api_service/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
  "--cov=src/api_service",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=50",
]
markers = [
  "unit: Unit tests",
  "integration: Integration tests",
  "system: System tests",
  "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/api_service", "aimino_frontend/aimino_core"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
